--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">DYVideo</string>
     <string name="dy_iv_desciption">列表的图片</string>
     <string name="dy_title_default">--</string>
+    <string name="title_activity_video_play">VideoPlayActivity</string>
+    <string name="num">99</string>
 </resources>
